--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^7.6.0",
+    "react-big-calendar": "^1.11.2",
+    "moment": "^2.30.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@types/react-big-calendar": "^1.8.8",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.16",
     "eslint": "^9.25.0",
