--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
+    "@mui/material": "^5.15.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "ag-grid-community": "^31.0.1",
     "ag-grid-react": "^31.0.1",
     "date-fns": "^4.1.0",
@@ -20,13 +23,15 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^7.6.0",
     "react-big-calendar": "^1.11.2",
-    "moment": "^2.30.1"
+    "moment": "^2.30.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@types/react-big-calendar": "^1.8.8",
+    "@types/uuid": "^9.0.8",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.16",
     "eslint": "^9.25.0",
