--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -13,7 +13,8 @@
   "description": "StoryVerse MCP Server",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.11.2",
-    "@supabase/supabase-js": "^2.49.4"
+    "@supabase/supabase-js": "^2.49.4",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
