--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "storyverse-mcp",
   "version": "1.0.0",
   "main": "index.js",
@@ -12,7 +13,7 @@
   "license": "ISC",
   "description": "StoryVerse MCP Server",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.11.2",
+    "@modelcontextprotocol/sdk": "^1.11.3",
     "@supabase/supabase-js": "^2.49.4",
     "dotenv": "^16.3.1"
   },
