--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^7.6.0",
     "react-big-calendar": "^1.11.2",
+    "react-dropzone": "^14.2.3",
     "moment": "^2.30.1",
     "uuid": "^9.0.1"
   },
@@ -32,6 +33,7 @@
     "@types/react-dom": "^18.2.19",
     "@types/react-big-calendar": "^1.8.8",
     "@types/uuid": "^9.0.8",
+    "@types/react-dropzone": "^5.1.0",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.16",
     "eslint": "^9.25.0",
