--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -15,7 +15,11 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.11.3",
     "@supabase/supabase-js": "^2.49.4",
-    "dotenv": "^16.3.1"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
