--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "storyverse-client",
   "private": true,
-  "version": "0.6.17",
+  "version": "0.7.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,21 +11,41 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
+    "@supabase/auth-helpers-react": "^0.4.2",
     "@mui/material": "^5.15.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
     "ag-grid-community": "^31.0.1",
     "ag-grid-react": "^31.0.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.263.1",
+    "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^7.6.0",
     "react-big-calendar": "^1.11.2",
+    "react-day-picker": "^8.10.0",
     "react-dropzone": "^14.2.3",
+    "recharts": "^2.10.1",
     "moment": "^2.30.1",
-    "uuid": "^9.0.1"
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
