--- a/package.json
+++ b/package.json
@@ -12,19 +12,32 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.2",
     "@mui/material": "^5.13.5",
     "@mui/x-data-grid": "^6.7.0",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/supabase-js": "^2.38.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.263.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.5",
+    "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
+    "react-hot-toast": "^2.4.1", 
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.12.1",
     "recharts": "^2.7.2",
     "tailwind-merge": "^1.14.0",
@@ -36,6 +49,7 @@
     "@types/lodash": "^4.14.195",
     "@types/node": "^20.3.1",
     "@types/react": "^19.1.3",
+    "@types/react-big-calendar": "^1.8.7",
     "@types/react-dom": "^19.1.4",
     "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
