--- a/package.json
+++ b/package.json
@@ -12,48 +12,34 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@hookform/resolvers": "^3.3.2",
-    "@mui/material": "^5.13.5",
-    "@mui/x-data-grid": "^6.7.0",
-    "@radix-ui/react-checkbox": "^1.0.4",
+    "@mui/material": "^5.13.2",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^1.2.2",
-    "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@supabase/auth-helpers-react": "^0.4.2",
-    "@supabase/supabase-js": "^2.38.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "date-fns": "^2.30.0",
-    "lodash": "^4.17.21",
+    "@supabase/supabase-js": "^2.24.0",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
+    "cmdk": "^0.2.0",
     "lucide-react": "^0.263.1",
-    "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-big-calendar": "^1.8.5",
-    "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.44.3",
-    "react-hot-toast": "^2.4.1", 
-    "react-icons": "^4.11.0",
-    "react-router-dom": "^6.12.1",
-    "recharts": "^2.7.2",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7",
+    "react-router-dom": "^6.11.2",
+    "recharts": "^2.6.2",
+    "tailwind-merge": "^1.13.2",
+    "tailwindcss-animate": "^1.0.6",
     "uuid": "^9.0.0",
+    "@hookform/resolvers": "^3.1.0",
+    "react-hook-form": "^7.44.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.195",
-    "@types/node": "^20.3.1",
-    "@types/react": "^19.1.3",
-    "@types/react-big-calendar": "^1.8.7",
-    "@types/react-dom": "^19.1.4",
-    "@types/uuid": "^9.0.2",
-    "@typescript-eslint/eslint-plugin": "^8.32.1",
-    "@typescript-eslint/parser": "^8.32.1",
+    "@types/node": "^20.2.5",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@types/uuid": "^9.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
@@ -62,6 +48,6 @@
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
-    "vite": "^4.3.9"
+    "vite": "^4.3.2"
   }
 }
